# taller-mecanico-sub-agents-langgraph

./: .gitignore  CAMBIOS_INTENTADOS_15_MAY_2026.md  CHECKPOINT_CAMBIOS_EVALUADOR.md  FALLA_RAMA_2_ANALISIS.md  PLAN_PUESTA_EN_MARCHA_FASE1.md  README.md  RESUMEN_CURSO_LANGGRAPH.md  RESUMEN_PROYECTO.md  TEST_CONVERSATIONS.md  chat.html  docker-compose.yml  langgraph.json  pyproject.toml  server.py
.claude/: SKILLS_INDEX.md  skills.json
.claude/skills/: advanced.md  deployment.md  foundation.md  patterns.md  reference.md
LEARNING/: DIAGRAMA_FLUJO_VISUAL.md  EXPLICACION_FAQ_Y_MENU.md  FLUJO_COMPLETO_CON_FAQ.md  IMPLEMENTACION_MENSAJE_INICIAL.md  INTEGRACION_DATA_MECANICOS.md  RESUMEN_PROYECTO.md
docs/: FLUJO_RAMA_DIAGNOSTICO.md
docs/mecanica/: README.txt
scripts/: init_db.sql  load_docs.py  verify_rag.py
src/: __init__.py
src/agents/taller/: __init__.py  agent.py  data_mecanicos.py  prompts.py  state.py
src/agents/taller/nodes/agregador/: node.py
src/agents/taller/nodes/nodo_faq/: node.py
src/agents/taller/nodes/orquestador/: node.py
src/agents/taller/nodes/rama_agendamiento/: booking_agent.py  consultar_disponibilidad.py  evaluador_agendamiento.py  extractor.py  node.py  pedir_datos.py  route_booking.py  simulated_availability.py  tools.py  validador_responder.py
src/agents/taller/nodes/rama_diagnostico/: node.py
src/agents/taller/rag/: retriever.py
